fix overflow bug

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ li {
     flex-direction: row-reverse;
     position: relative;
     justify-content: space-between;
+    width: 100%;
 }
 .btn-delete {
     width: 32px;
@@ -83,8 +84,16 @@ li {
 }
 .card-description {
     margin: 0;
-    max-width: 80%;
     text-align: left;
     white-space: initial;
-    overflow: hidden;    
+    overflow: auto;
+    overflow-wrap: break-word; 
+}
+@media screen and (max-width: 480px) {
+    li {
+        display: inline-block;
+    }
+    .card-description {
+        text-align: center;
+    }
 }
